Stop the horizontal scrollbar from showing

--- a/src/components/AnimatedSlider.css
+++ b/src/components/AnimatedSlider.css
@@ -37,7 +37,9 @@
 	justify-content: center;
 	align-items: center;
 	margin-top: 85px;
-	touch-action: pan-y;;
+	width: 100vw;
+	overflow: hidden;
+	touch-action: pan-y;
 }
 
 .items {
@@ -45,6 +47,7 @@
 	justify-content: center;
 	z-index: 5;
 	animation: cardLoading 2.5s ease-in-out;
+	overflow: hidden;
 }
 
 .item {
